# Fly-Wheel

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/collector/: mod.rs  models.rs
src/core/: adaptive.rs  config.rs  error.rs  mod.rs
src/cracker/: dict.rs  mod.rs  mongodb_crack.rs  mssql.rs  mysql.rs  postgres.rs  rdp.rs  redis_crack.rs  service.rs  ssh.rs  winrm.rs
src/modules/: discover.rs  host.rs  info.rs  mod.rs  move.rs  persist.rs  scan.rs  vuln.rs
src/modules/collect/: credential.rs  file.rs  mod.rs  network.rs  process.rs  system.rs
src/modules/identify/: banner.rs  fingerprint.rs  mod.rs
src/output/: color.rs  mod.rs  progress.rs  table.rs
src/scanner/: config.rs  domain.rs  host.rs  mod.rs  models.rs  port.rs  service.rs
src/tunnel/: chain.rs  config.rs  forward.rs  mod.rs  models.rs  reverse.rs  socks5.rs
