[package]
name = "fly-wheel"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
trust-dns-resolver = "0.22"
socket2 = "0.5"
pnet = { version = "0.31", features = ["std"] }
rand = "0.8"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
base64 = "0.21"
cfg-if = "1.0"
libc = "0.2"