[package]
name = "fly-wheel"
version = "0.1.0"
edition = "2024"

[dependencies]
# 异步运行时
tokio = { version = "1.0", features = ["full"] }
# 命令行解析
clap = { version = "4.0", features = ["derive"] }
# DNS 解析
trust-dns-resolver = "0.22"
# 底层 socket 操作
socket2 = "0.5"
# 网络数据包处理
pnet = { version = "0.35", features = ["std"] }
# 随机数生成
rand = "0.8"
# 异步编程
futures = "0.3"
# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 时间处理
chrono = "0.4"
# Base64 编码
base64 = "0.21"
# 条件编译
cfg-if = "1.0"
# 系统调用 (Unix)
libc = "0.2"

# ==================== 新增依赖 ====================

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 日志系统
tracing = "0.1"
tracing-subscriber = "0.3"

# 输出美化
comfy-table = "7.0"
indicatif = "0.17"
termcolor = "1.2"

# 交互式配置
dialoguer = "0.11"

# HTTP 客户端
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }

# 配置文件
toml = "0.7"
dirs = "5.0"

# 正则表达式
regex = "1.9"

# ==================== 第二阶段新增依赖 ====================

# 系统信息收集
sysinfo = "0.30"
whoami = "1.5"
local-ip-address = "0.6"

# 文件系统
walkdir = "2.5"
glob = "0.3"

# 序列化
bincode = "1.3"
hex = "0.4"

# 密码学
bcrypt = "0.16"
aes = "0.8"
sha2 = "0.10"

# SSH key (仅用于密钥解析)
ssh-key = "0.6"

# SOCKS5
socks5-protocol = "0.3"

[target.'cfg(windows)'.dependencies]
# Windows 注册表操作
winreg = "0.52"
# Windows API
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
] }

[target.'cfg(unix)'.dependencies]
# Unix 系统接口
nix = { version = "0.28", default-features = false, features = ["user", "process", "net", "fs"] }
users = "0.11"